--- a/index.html
+++ b/index.html
@@ -6,5 +6,13 @@
 </head>
 <body>
 
+<div id="nav-container"></div>
+
+
+
+<script src="js/sdk.js"></script>
+<script>
+    SDK.Navigation.loadNav();
+</script>
 </body>
 </html>
