--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 
 <script src="js/sdk.js"></script>
+<script src="lib/js/jquery-3.2.1.js"></script>
 <script>
     SDK.Navigation.loadNav();
 </script>
