login.html opdateret

--- a/login.html
+++ b/login.html
@@ -3,8 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
+    <link rel="stylesheet" href="lib/css/bootstrap.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+
+<div id="nav-container"></div>
+
+
+
+<script src="js/sdk.js"></script>
+<script src="lib/js/jquery-3.2.1.js"></script>
+<script>
+    SDK.Navigation.loadNav();
+</script>
 
 </body>
 </html>
