--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
 
 <script src="js/sdk.js"></script>
 <script src="lib/js/jquery-3.2.1.js"></script>
-
+<script scr="js/login.js"></script>
 
 </body>
 </html>
