--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 </head>
 <body>
 
-<div id="nav-container"></div>
-
+<div class="container">
+<div class="row" id="nav-container"></div>
+</div>
 
 
 <script src="js/sdk.js"></script>
