Fixed some bugs regarding loadNav in login.html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
 <script src="js/sdk.js"></script>
 <script src="lib/js/jquery-3.2.1.js"></script>
 <script>
-    SDK.Navigation.loadNav();
+    $(document).ready(() => {
+        SDK.Navigation.loadNav();
+    });
+
 </script>
 </body>
 </html>
