--- a/login.html
+++ b/login.html
@@ -34,7 +34,7 @@
 <script src="lib/js/jquery-3.2.1.js"></script>
 <script src="lib/js/bootstrap.js"></script>
 <script src="js/sdk.js"></script>
-<script scr="js/login.js"></script>
+<script src="js/login.js"></script>
 
 </body>
 </html>
