Begun logic of login.js

--- a/login.html
+++ b/login.html
@@ -19,12 +19,12 @@
                 <div id="load-test"></div>
             </div>
             <div class="form-group">
-                <label class="control-label" for="inputEmail">Email address</label>
-                <input type="email" class="form-control" id="inputEmail" placeholder="Email">
+                <label class="control-label" for="inputEmail">Username</label>
+                <input type="email" class="form-control" id="inputUsername" placeholder="Enter username here">
             </div>
             <div class="form-group">
                 <label class="control-label" for="inputPassword">Password</label>
-                <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+                <input type="password" class="form-control" id="inputPassword" placeholder="Enter password here">
             </div>
             <button style="margin-bottom: 40px" class="btn btn-default" id="login-button">Submit</button>
         </div>
