--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
                 <div id="load-test"></div>
             </div>
             <div class="form-group">
-                <label class="control-label" for="inputEmail">Username</label>
+                <label class="control-label" for="inputUsername">Username</label>
                 <input type="email" class="form-control" id="inputUsername" placeholder="Enter username here">
             </div>
             <div class="form-group">
