--- a/index.html
+++ b/index.html
@@ -14,14 +14,13 @@
 <div class="row" id="nav-container"></div>
 </div>
 
+<h3>KUSSE</h3>
 
-<script src="js/sdk.js"></script>
+
 <script src="lib/js/jquery-3.2.1.js"></script>
-<script>
-    $(document).ready(() => {
-        SDK.Navigation.loadNav();
-    });
+<script src="lib/js/bootstrap.js"></script>
+<script src="js/sdk.js"></script>
+<script src="js/login.js"></script>
 
-</script>
 </body>
 </html>
