More logic for the encryption to attempt bug fixing regarding parsing of JSON (NOT FINISHED). orders.html for testing encrypt/decrypt temporarily

--- a/orders.html
+++ b/orders.html
@@ -6,5 +6,11 @@
 </head>
 <body>
 
+<script src="js/sdk.js"></script>
+<script>
+    let encrypted = SDK.Encryption.encryptDecrypt("{\"username\":\"dev\",\"password\":\"dev\"}");
+    console.log(encrypted);
+</script>
+
 </body>
 </html>
