--- a/login.html
+++ b/login.html
@@ -27,6 +27,8 @@
                 <input type="password" class="form-control" id="inputPassword" placeholder="Enter password here">
             </div>
             <button style="margin-bottom: 40px" class="btn btn-default" id="login-button">Submit</button>
+
+            <h3>Don't have user yet? Create one <a href="create.html">here</a>.</h3>
         </div>
     </div>
 </div>
