still trying to debug decryption after response from server

--- a/orders.html
+++ b/orders.html
@@ -14,13 +14,7 @@
 
     console.log(SDK.Encryption.encryptDecrypt(encrypted));
 
-    let encrypted2 = SDK.Encryption.encryptDecrypt("{\n" +
-        "\"user_id\": 76,\n" +
-        "\"username\": \"dev\",\n" +
-        "\"password\": \"852aad9ccfaa879d9a48dedc35675f134edc48cc7c7fb8bd7e66f99a507968ec\",\n" +
-        "\"isPersonel\": false,\n" +
-        "\"token\": \"eyJraWQiOiI3NiIsInR5cCI6IkpXVCIsImFsZyI6IkhTMjU2In0.eyJpc3MiOiJZT0xPIiwiZXhwIjoxNTEwNjY3MDYwNDE1LCJ1c2VybmFtZSI6ImRldiJ9.3HRBQOffhbL5FkFKIqPTwlMEo5qiUDgzkC3rngKauSA\"\n" +
-        "}")
+    let encrypted2 = SDK.Encryption.encryptDecrypt("{\"user_id\":76,\"username\":\"dev\",\"password\":\"852aad9ccfaa879d9a48dedc35675f134edc48cc7c7fb8bd7e66f99a507968ec\",\"isPersonel\":false,\"token\":\"eyJraWQiOiI3NiIsInR5cCI6IkpXVCIsImFsZyI6IkhTMjU2In0.eyJpc3MiOiJZT0xPIiwiZXhwIjoxNTEwNjg4MDc1MDE4LCJ1c2VybmFtZSI6ImRldiJ9.GyozEbbDJrHopZVGacSlYYrH4AS26EVlKf5vnirqF-Q\"}")
 
     console.log(encrypted2);
 
