Fixed saving server data to local storage by parsing the data (only works in login scope, not in ajax... don't know why)

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div class="row" id="nav-container"></div>
 </div>
 
-<h3>KUSSE</h3>
+<h3>Login virker</h3>
 
 
 <script src="lib/js/jquery-3.2.1.js"></script>
