added more logic for the index.html site showing text corresponding to staff/user logged in. Also fixed navbar

--- a/index.html
+++ b/index.html
@@ -11,16 +11,32 @@
 <body>
 
 <div class="container">
-<div class="row" id="nav-container"></div>
-</div>
 
-<h3>Login virker</h3>
+    <div class="row" id="nav-container"></div>
+
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="jumbotron">
+                <h1 class="display-3" id="index_hello">Hello, world!</h1>
+                <p class="lead" id="index_text">This is a simple hero unit, a simple jumbotron-style component for calling extra
+                    attention to featured content or information.</p>
+                <hr class="my-4">
+                <p id="index_text2">It uses utility classes for typography and spacing to space content out within the larger
+                    container.</p>
+                <p class="lead">
+                    <a class="btn btn-primary btn-lg" href="orders.html" role="button">View Orders</a>
+                </p>
+            </div>
+
+        </div>
+    </div>
+</div>
 
 
 <script src="lib/js/jquery-3.2.1.js"></script>
 <script src="lib/js/bootstrap.js"></script>
 <script src="js/sdk.js"></script>
-<script src="js/login.js"></script>
+<script src="js/index.js"></script>
 
 </body>
 </html>
