--- a/login.html
+++ b/login.html
@@ -26,7 +26,7 @@
                 <label class="control-label" for="inputPassword">Password</label>
                 <input type="password" class="form-control" id="inputPassword" placeholder="Enter password here">
             </div>
-            <button style="margin-bottom: 40px" class="btn btn-default" id="login-button">Submit</button>
+            <button style="margin-bottom: 40px" class="btn btn-default" id="login-button">Login</button>
 
             <h3>Don't have user yet? Create one <a href="create.html">here</a>.</h3>
         </div>
