--- a/nav.html
+++ b/nav.html
@@ -13,8 +13,8 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Menu <span class="sr-only">(current)</span></a></li>
-                <li><a href="#">My Orders</a></li>
+                <li class="active"><a href="menu.html">Menu <span class="sr-only">(current)</span></a></li>
+                <li><a href="orders.html">My Orders</a></li>
                 <!--<li class="dropdown">-->
                     <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>-->
                     <!--<ul class="dropdown-menu">-->
