Added logic js and html for creation, now about to test

--- a/create.html
+++ b/create.html
@@ -26,7 +26,7 @@
                 <label class="control-label" for="inputPassword">Password</label>
                 <input type="password" class="form-control" id="inputPassword" placeholder="Enter password here">
             </div>
-            <button style="margin-bottom: 40px" class="btn btn-default" id="login-button">Create</button>
+            <button style="margin-bottom: 40px" class="btn btn-default" id="create-button">Create</button>
         </div>
     </div>
 </div>
