--- a/index.html
+++ b/index.html
@@ -17,12 +17,10 @@
     <div class="row">
         <div class="col-lg-12">
             <div class="jumbotron">
-                <h1 class="display-3" id="index_hello">Hello, world!</h1>
-                <p class="lead" id="index_text">This is a simple hero unit, a simple jumbotron-style component for calling extra
-                    attention to featured content or information.</p>
+                <h1 class="display-3" id="index_hello">Hello!</h1>
+                <p class="lead" id="index_text">Welcome to the CBS Canteen Interface.</p>
                 <hr class="my-4">
-                <p id="index_text2">It uses utility classes for typography and spacing to space content out within the larger
-                    container.</p>
+                <p id="index_text2"><a href="login.html">Log in</a> to view this website's functionality. If you don't have an user you can create one <a href="create.html">here</a>.</p>
                 <p class="lead">
                     <a class="btn btn-primary btn-lg" href="orders.html" role="button">View Orders</a>
                 </p>
