--- a/create.html
+++ b/create.html
@@ -19,12 +19,12 @@
                 <div id="load-test"></div>
             </div>
             <div class="form-group">
-                <label class="control-label" for="inputUsername">Username</label>
-                <input type="email" class="form-control" id="inputUsername" placeholder="Enter username here">
+                <label class="control-label" for="inputCreateUsername">Username</label>
+                <input type="email" class="form-control" id="inputCreateUsername" placeholder="Enter username here">
             </div>
             <div class="form-group">
-                <label class="control-label" for="inputPassword">Password</label>
-                <input type="password" class="form-control" id="inputPassword" placeholder="Enter password here">
+                <label class="control-label" for="inputCreatePassword">Password</label>
+                <input type="password" class="form-control" id="inputCreatePassword" placeholder="Enter password here">
             </div>
             <button style="margin-bottom: 40px" class="btn btn-default" id="create-button">Create</button>
         </div>
@@ -34,7 +34,7 @@
 <script src="lib/js/jquery-3.2.1.js"></script>
 <script src="lib/js/bootstrap.js"></script>
 <script src="js/sdk.js"></script>
-<script src="js/login.js"></script>
+<script src="js/create.js"></script>
 
 </body>
 </html>
