--- a/nav.html
+++ b/nav.html
@@ -7,14 +7,14 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Canteen Application YOLO</a>
+            <a class="navbar-brand" href="index.html">Canteen Application YOLO</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="menu.html">Menu <span class="sr-only">(current)</span></a></li>
-                <li><a href="orders.html">My Orders</a></li>
+                <li class="active"><a href="menu.html" id="nav-menu-link">Menu<span class="sr-only">(current)</span></a></li>
+                <li><a href="orders.html" id="nav-orders-link">My Orders</a></li>
                 <!--<li class="dropdown">-->
                     <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>-->
                     <!--<ul class="dropdown-menu">-->
@@ -29,8 +29,10 @@
                 <!--</li>-->
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">Login</a></li>
+                <li><a href="login.html">Login</a></li>
             </ul>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
 </nav>
+
+ <script src="js/nav.js"></script>
