--- a/menu.html
+++ b/menu.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/main.css">
 
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Canteen Client - Menu</title>
 
 </head>
 <body>
