--- a/orders.html
+++ b/orders.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Canteen Client - Orders</title>
 </head>
 <body>
 
