--- a/menu.html
+++ b/menu.html
@@ -39,9 +39,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <a href="checkout.html">
-                    <button type="button" class="btn btn-success">Proceed to checkout</button>
-                </a>
+                <button type="button" class="btn btn-success" id="checkout-button">Proceed to checkout</button>
             </div>
         </div>
     </div>
