--- a/orders.html
+++ b/orders.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+    <link rel="stylesheet" href="lib/css/bootstrap.css">
+    <link rel="stylesheet" href="css/main.css">
+
     <meta charset="UTF-8">
     <title>Canteen Client - Orders</title>
 </head>
@@ -41,6 +45,38 @@
     </div>
 </div>
 
+<div class="container">
+
+    <div class="row" id="nav-container"></div>
+
+    <div class="page-header">
+        <h1>My Orders</h1>
+    </div>
+
+    <div class="modal-body">
+        <table class="table">
+            <thead>
+            <tr>
+                <th>Order ID</th>
+                <th>Time ordered</th>
+                <th>Item</th>
+                <th>Ready?</th>
+            </tr>
+            </thead>
+            <tbody id="orders-tbody">
+
+            </tbody>
+        </table>
+    </div>
+
+
+
+</div>
+
+<script src="lib/js/jquery-3.2.1.js"></script>
+<script src="lib/js/bootstrap.js"></script>
+<script src="js/sdk.js"></script>
+<script src="js/orders.js"></script>
 
 </body>
 </html>
