Staff retrieving all orders now works

--- a/orders.html
+++ b/orders.html
@@ -59,7 +59,7 @@
             <tr>
                 <th>Order ID</th>
                 <th>Time ordered</th>
-                <th>Item</th>
+                <th>Items</th>
                 <th>Ready?</th>
             </tr>
             </thead>
