--- a/stafforders.html
+++ b/stafforders.html
@@ -18,7 +18,8 @@
     <div class="row" id="nav-container"></div>
 
     <div class="page-header">
-        <h1>My Orders</h1>
+        <h1>All orders</h1>
+        <p><strong>Click the " X " of an order to make it ready for delivery.</strong></p>
     </div>
 
     <div class="modal-body">
@@ -27,7 +28,7 @@
             <tr>
                 <th>Order ID</th>
                 <th>Time ordered</th>
-                <th>Item</th>
+                <th>Items</th>
                 <th>Ready?</th>
             </tr>
             </thead>
@@ -40,6 +41,11 @@
 
 
 </div>
+
+<script src="lib/js/jquery-3.2.1.js"></script>
+<script src="lib/js/bootstrap.js"></script>
+<script src="js/sdk.js"></script>
+<script src="js/stafforders.js"></script>
 
 
 
