--- a/stafforders.html
+++ b/stafforders.html
@@ -26,7 +26,7 @@
         <table class="table">
             <thead>
             <tr>
-                <th>Order ID</th>
+                <th class="order-id">Order ID</th>
                 <th>Time ordered</th>
                 <th>Items</th>
                 <th>Ready?</th>
