modularized checkout and added references where necessary

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 <script src="lib/js/bootstrap.js"></script>
 <script src="js/sdk.js"></script>
 <script src="js/index.js"></script>
+<script src="js/checkout.js"></script>
 
 </body>
 </html>
