--- a/menu.html
+++ b/menu.html
@@ -63,6 +63,7 @@
 <script src="lib/js/bootstrap.js"></script>
 <script src="js/sdk.js"></script>
 <script src="js/menu.js"></script>
+<script src="js/checkout.js"></script>
 
 </body>
 </html>
