--- a/orders.html
+++ b/orders.html
@@ -74,6 +74,7 @@
 <script src="lib/js/bootstrap.js"></script>
 <script src="js/sdk.js"></script>
 <script src="js/orders.js"></script>
+<script src="js/checkout.js"></script>
 
 </body>
 </html>
