added total to my orders

--- a/orders.html
+++ b/orders.html
@@ -57,6 +57,7 @@
                 <th>Order ID</th>
                 <th>Time ordered</th>
                 <th>Items</th>
+                <th>Price</th>
                 <th>Ready?</th>
             </tr>
             </thead>
