--- a/stafforders.html
+++ b/stafforders.html
@@ -29,6 +29,7 @@
                 <th class="order-id">Order ID</th>
                 <th>Time ordered</th>
                 <th>Items</th>
+                <th>Price</th>
                 <th>Ready?</th>
             </tr>
             </thead>
